# haskelling

./: .dockerignore  .gitignore  ADR-001.md  BACKEND-STORIES.md  CONTENT-STORIES.md  CURRICULUM.json  DATA-MODEL.md  DECISIONS.md  EVAL-SERVICE-DESIGN.md  FRONTEND-STORIES.md  INFRA-TASKS.md  INITIAL_PLANNING.md  LAUNCH-RUNBOOK.md  LICENSE  README.md  STORY-ORDER.md  TRIAGE.md  create-github-issues.sh  docker-compose.yml  fly.toml  netlify.toml  test-all-exercises  test-exercise
.github/workflows/: deploy-staging.yml  deploy.yml  frontend.yml  haskell.yml
backend/: .env.example  Dockerfile  haskelling.cabal
backend/app/: Main.hs
backend/src/: API.hs  Auth.hs  Database.hs  Judge0.hs  Schema.hs  Seed.hs  Server.hs
curriculum/exercises/basics/: chapter.json
curriculum/exercises/basics/add-integers/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/basics/boolean-values/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/basics/hello-world/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/basics/if-expressions/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/basics/string-concatenation/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/functions/: chapter.json
curriculum/exercises/functions/function-composition/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/functions/lambda-function/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/functions/let-expression/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/functions/partial-application/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/functions/where-clause/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/higher-order-functions/: chapter.json
curriculum/exercises/higher-order-functions/apply-twice/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/higher-order-functions/composition/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/higher-order-functions/filtering/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/higher-order-functions/foldl/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/higher-order-functions/foldr/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/higher-order-functions/lambdas/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/higher-order-functions/mapping/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/lists/: chapter.json
curriculum/exercises/lists/filter-function/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/lists/list-basics/: exercise.json  solution.hs  stub.hs  tests.hs
curriculum/exercises/making-our-own-types-and-typeclasses/: chapter.json
curriculum/exercises/pattern-matching/: chapter.json
curriculum/exercises/recursion/: chapter.json
curriculum/exercises/starting-out/: chapter.json
curriculum/exercises/syntax-in-functions/: chapter.json
curriculum/exercises/typeclasses/: chapter.json
curriculum/exercises/types/: chapter.json
curriculum/exercises/types-and-typeclasses/: chapter.json
curriculum/lessons/: basics.md  functions.md  higher-order-functions.md  lists.md  making-our-own-types-and-typeclasses.md  pattern-matching.md  recursion.md  starting-out.md  syntax-in-functions.md  typeclasses.md  types-and-typeclasses.md  types.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.svelte  api.ts  app.css  types.ts
frontend/src/lib/: CodeEditor.svelte  ExercisePage.svelte  LessonPage.svelte  Sidebar.svelte  analytics.ts  auth.ts
(+231 files in other folders)
