cabal-version: 3.0
name:          haskelling
version:       0.1.0.0
build-type:    Simple

common shared
  default-language:   GHC2021
  ghc-options:        -Wall
  default-extensions: OverloadedStrings

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    API
    Server
  build-depends:
    base           >= 4.17 && < 5,
    aeson          >= 2.0,
    servant        >= 0.20,
    servant-server >= 0.20,
    text           >= 2.0,
    wai            >= 3.2

executable haskelling
  import:        shared
  main-is:       Main.hs
  hs-source-dirs: app
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base         >= 4.17 && < 5,
    haskelling,
    warp         >= 3.3
