cabal-version: 3.0
name:          haskelling
version:       0.1.0.0
build-type:    Simple

common shared
  default-language:   GHC2021
  ghc-options:        -Wall
  default-extensions: LambdaCase OverloadedStrings DuplicateRecordFields

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    API
    Auth
    Database
    Judge0
    Schema
    Seed
    Server
  build-depends:
    base                  >= 4.17 && < 5,
    aeson                 >= 2.0,
    base64-bytestring     >= 1.2,
    bytestring            >= 0.11,
    zip-archive           >= 0.4,
    containers            >= 0.6,
    http-client           >= 0.7,
    http-client-tls       >= 0.3,
    http-types            >= 0.12,
    jose                  >= 0.10 && < 0.11,
    monad-logger          >= 0.3,
    mtl                   >= 2.2,
    network               >= 3.1,
    stm                   >= 2.5,
    persistent            >= 2.14,
    persistent-postgresql >= 2.13,
    servant               >= 0.20,
    servant-server        >= 0.20,
    text                  >= 2.0,
    time                  >= 1.9,
    wai                   >= 3.2,
    wai-cors              >= 0.2,
    directory             >= 1.3,
    filepath              >= 1.4

executable haskelling
  import:        shared
  main-is:       Main.hs
  hs-source-dirs: app
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base                    >= 4.17 && < 5,
    bytestring              >= 0.11,
    haskelling,
    persistent              >= 2.14,
    persistent-postgresql   >= 2.13,
    text                    >= 2.0,
    warp                    >= 3.3
